# safety-manager

./: .env.local  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.sh  startlocal.sh
app/: main.py
app/api/v1/: employee.py
app/core/: config.py  database.py
app/crud/: employee.py
app/models/: __init__.py  employee.py  equipment.py
app/schemas/: employee.py
app/service/: employee.py
